gap fixed

--- a/user-details.css
+++ b/user-details.css
@@ -1,12 +1,12 @@
 .container {
     padding: 2rem 5% 2rem 5%;
+    gap: 2rem
 }
 
 .details {
     display: grid;
     grid-template-areas: "div div";
     gap: 2rem;
-    margin: 2rem 0;
 }
 
 .icon {
@@ -35,4 +35,8 @@ h2 {
 
 .card {
     gap: 1rem;
+}
+
+.card p {
+    text-transform: capitalize;
 }
